# AugmentedReality

./: CMakeLists.txt
src/: AssimpModel.cpp  AssimpModel.h  DrawPrimitives.cpp  DrawPrimitives.h  MarkerTracker.cpp  MarkerTracker.h  Mesh.cpp  Mesh.h  ObjectParser.cpp  ObjectParser.h  RenderText.cpp  RenderText.h  Shader.cpp  Shader.h  main.cpp  shader_utils.cpp
